--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,5 @@ homework/hw13/Screenshot from 2019-04-19 10-50-46.png
 *fuse_hidden*
 .Rhistory
 homework/hw14/hw14
+venv/
+homework/hw14/Screenshot from 2019-04-26 13-17-15.png
