--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ homework/hw13/Screenshot from 2019-04-19 10-50-46.png
 homework/hw14/hw14
 venv/
 homework/hw14/Screenshot from 2019-04-26 13-17-15.png
+homework/hw15/input*.txt
+homework/hw15/output*.txt
